--- a/styles.css
+++ b/styles.css
@@ -22,72 +22,6 @@
     flex-grow: 1;
 }
 
-/* Estilos para os tipos de Pokémon */
-.steel {
-    background-color: #f4f4f4;
-}
-
-.grass {
-    background-color: #defde0;
-}
-
-.fire {
-    background-color: #fddfdf;
-}
-
-.electric {
-    background-color: #fcf7de;
-}
-
-.water,
-.ice {
-    background-color: #def3fd;
-}
-
-.ground {
-    background-color: #f4e7da;
-}
-
-.rock {
-    background-color: #d5d5d4;
-}
-
-.fairy {
-    background-color: #fceaff;
-}
-
-.poison {
-    background-color: #c4add6;
-}
-
-.bug {
-    background-color: #f8d5a3;
-}
-
-.dragon {
-    background-color: #97b3e6;
-}
-
-.psychic {
-    background-color: #eaeda1;
-}
-
-.flying {
-    background-color: #f5f5f5;
-}
-
-.fighting {
-    background-color: #e6e0d4;
-}
-
-.ghost {
-    background-color: #ebc2c2;
-}
-
-.normal {
-    background-color: #f5f5f5;
-}
-
 /* Estilos para a página de detalhes do Pokémon */
 #pokemon-details {
     display: flex;
@@ -101,6 +35,7 @@
 #pokemon-details img {
     max-width: 60%;
     height: auto;
+    
 }
 
 #pokemon-details .pokemon-info {
@@ -115,3 +50,19 @@
 #pokemon-details ul li {
     margin-bottom: 10px;
 }
+
+/* Estilos para o botão "Voltar ao Topo" */
+#scrollTopButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 99;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  #scrollTopButton img {
+    width: 90px; /* Ajuste o tamanho conforme necessário */
+    height: auto;
+  }
