--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,10 @@
   width: 100px; /* Ajuste o tamanho da imagem da Pokédex conforme necessário */
   height: auto;
 }
-
+.navbar-brand img.galera {
+  width: 200px; /* Ajuste o tamanho da imagem da Pokédex conforme necessário */
+  height: auto;
+}
 /* Estilos para a barra de pesquisa */
 .search-bar {
   display: flex;
