--- a/styles.css
+++ b/styles.css
@@ -24,34 +24,96 @@
 .search-input {
   flex-grow: 1;
 }
-
-/* Estilos para a página de detalhes do Pokémon */
-#pokemon-details {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 800px;
-  margin: 0 auto;
-  margin-top: 20px;
+body {
+  background-image: url("./imagens/d0559662c49b354f89770b376c213e00.gif");
+  background-size: cover; 
+  background-attachment: fixed;
+  background-repeat: no-repeat; 
+}
+.card {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 2); 
+  transition: box-shadow 0.3s ease; 
+}
+.card:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 2); 
+  transform: scale(
+    1.05
+  ); 
+}
+.steel {
+  background-color: #b8b8d0;
 }
 
-#pokemon-details img {
-  max-width: 60%;
-  height: auto;
-  
+.grass {
+  background-color: #defde0;
 }
 
-#pokemon-details .pokemon-info {
-  max-width: 50%;
+.fire {
+  background-color: #f05030;
 }
 
-#pokemon-details ul {
-  list-style: none;
-  padding: 0;
+.grass {
+  background-color: #78c850;
 }
 
-#pokemon-details ul li {
-  margin-bottom: 10px;
+.electric {
+  background-color: #f8d030;
+}
+
+.water {
+  background-color: #6890f0;
+}
+
+.ice {
+  background-color: #98d8d8;
+}
+
+.ground {
+  background-color: #e0c068;
+}
+
+.rock {
+  background-color: #b8a038;
+}
+
+.fairy {
+  background-color: #fceaff;
+}
+
+.poison {
+  background-color: #a040a0;
+}
+
+.bug {
+  background-color: #68a090;
+}
+
+.dragon {
+  background-color: #7038f8;
+}
+
+.psychic {
+  background-color: #f85888;
+}
+
+.flying {
+  background-color: #a890f0;
+}
+
+.fighting {
+  background-color: #903028;
+}
+
+.ghost {
+  background-color: #705898;
+}
+
+.normal {
+  background-color: #a8a878;
+}
+
+.dark {
+  background-color: #705848;
 }
 
 /* Estilos para o botão "Voltar ao Topo" */
