--- a/css/details.css
+++ b/css/details.css
@@ -1,10 +1,10 @@
 body {
-    background: linear-gradient(to bottom, #6ab7f5, #fff);
-    min-height: 100vh;
+  background: linear-gradient(to bottom, #6ab7f5, #fff);
+  min-height: 100vh;
 
-    
-  }
-  .navbar-brand img {
+  
+}
+.navbar-brand img {
     width: 80px; /* Ajuste o tamanho da imagem da Pokébola conforme necessário */
     height: 80px;
     margin-right: 10px;
@@ -18,24 +18,14 @@ body {
     width: 200px; /* Ajuste o tamanho da imagem da Pokédex conforme necessário */
     height: auto;
   }
-  /* Estilos para a barra de pesquisa */
-  .search-bar {
-    display: flex;
-    align-items: center;
-  }
-  
-  .search-input {
-    flex-grow: 1;
-  }
-  
   /* Estilos para a página de detalhes do Pokémon */
-  #pokemon-details {
+#pokemon-details {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
-    margin-top: 20px;
+    margin-top: 100px;
   }
   
   #pokemon-details img {
@@ -56,3 +46,31 @@ body {
   #pokemon-details ul li {
     margin-bottom: 10px;
   }
+
+   /* Adicione uma animação fadeIn */
+   .pokemon-info {
+    animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.animated {
+  animation: zoomInOut 1.5s infinite alternate;
+}
+
+@keyframes zoomInOut {
+  0% {
+      transform: scale(1);
+  }
+  100% {
+      transform: scale(1.1);
+  }
+}
+
