--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,104 @@
-/* styles.css */
+body {
+  background-image: url("../imagens/d0559662c49b354f89770b376c213e00.gif");
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
 
-/* Estilos para a barra de navegação */
 .navbar-brand img {
-  width: 80px; /* Ajuste o tamanho da imagem da Pokébola conforme necessário */
+  width: 80px;
   height: 80px;
   margin-right: 10px;
 }
 
 .navbar-brand img.logo {
-  width: 100px; /* Ajuste o tamanho da imagem da Pokédex conforme necessário */
+  width: 100px;
   height: auto;
 }
+
 .navbar-brand img.galera {
-  width: 200px; /* Ajuste o tamanho da imagem da Pokédex conforme necessário */
+  width: 200px;
   height: auto;
 }
-body {
-  background-image: url("../imagens/d0559662c49b354f89770b376c213e00.gif");
-  background-size: cover; 
-  background-attachment: fixed;
-  background-repeat: no-repeat; 
-}
+
 .card {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 2.2); 
-  transition: box-shadow 0.3s ease; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease;
   border: 4px double #fff;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
+  background-size: cover;
+  background-position: center;
 }
+
+.card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../imagens/pokeball_icon.png');
+  opacity: 0.2;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: -1;
+}
+
 .card:hover {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 2.2);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   transform: scale(1.05);
 }
+
+.steel,
+.grass,
+.fire,
+.grass,
+.electric,
+.water,
+.ice,
+.ground,
+.rock,
+.fairy,
+.poison,
+.bug,
+.dragon,
+.psychic,
+.flying,
+.fighting,
+.ghost,
+.normal,
+.dark {
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease;
+}
+
+.steel:hover,
+.grass:hover,
+.fire:hover,
+.grass:hover,
+.electric:hover,
+.water:hover,
+.ice:hover,
+.ground:hover,
+.rock:hover,
+.fairy:hover,
+.poison:hover,
+.bug:hover,
+.dragon:hover,
+.psychic:hover,
+.flying:hover,
+.fighting:hover,
+.ghost:hover,
+.normal:hover,
+.dark:hover {
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  transform: scale(1.05);
+}
+
 .steel {
   background-color: #b8b8d0;
 }
@@ -107,6 +174,7 @@ body {
 .dark {
   background-color: #705848;
 }
+
 /* Estilos para a barra de pesquisa */
 .search-bar {
   display: flex;
@@ -116,8 +184,6 @@ body {
 .search-input {
   flex-grow: 1;
 }
-
-
 
 /* Estilos para o botão "Voltar ao Topo" */
 #scrollTopButton {
@@ -130,6 +196,7 @@ body {
   border: none;
   cursor: pointer;
 }
+
 #scrollTopButton img {
   width: 100px; /* Ajuste o tamanho conforme necessário */
   height: auto;
