--- a/css/details.css
+++ b/css/details.css
@@ -1,13 +1,12 @@
 body {
   background: linear-gradient(to bottom, #6ab7f5, #fff);
   min-height: 100vh;
-  background-image: url(/imagens/background-pokemon.png);
+  background-image: url(../imagens/background-pokemon.png);
   background-repeat: no-repeat;
   background-position: center 100%;
   background: opacity;
 }
 
-/* Estilos para tablets e dispositivos com largura de tela de até 768 pixels */
 @media (max-width: 768px) {
   body {
     flex-direction: column;
@@ -15,32 +14,29 @@ body {
   }
 }
 
-/* Estilos para celulares e dispositivos com largura de tela de até 480 pixels */
 @media (max-width: 480px) {
   body {
     flex-direction: column;
     gap: 2vh;
   }
-  /* Adicione estilos específicos para celulares aqui */
 }
 
 .navbar-brand img {
-  width: 80px; /* Ajuste o tamanho da imagem da Pokébola conforme necessário */
+  width: 80px;
   height: 80px;
   margin-right: 10px;
 }
 
 .navbar-brand img.logo {
-  width: 100px; /* Ajuste o tamanho da imagem da Pokédex conforme necessário */
+  width: 100px;
   height: auto;
 }
 
 .navbar-brand img.galera {
-  width: 200px; /* Ajuste o tamanho da imagem da Pokédex conforme necessário */
+  width: 200px;
   height: auto;
 }
 
-/* Estilos para a página de detalhes do Pokémon */
 #pokemon-details {
   display: flex;
   justify-content: space-between;
@@ -57,9 +53,9 @@ body {
 
 #pokemon-details .pokemon-info {
   max-width: 50%;
-  background: rgba(252, 252, 252, 0.4);;
+  background: rgba(252, 252, 252, 0.4);
   backdrop-filter: blur(2px);
-  border: 2px solid rgba(255, 255, 255, .2);
+  border: 2px solid rgba(255, 255, 255, 0.2);
   border-radius: 30px;
   border-bottom-right-radius: 30px;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 1);
@@ -87,7 +83,6 @@ body {
   margin-bottom: 10px;
 }
 
-/* Adicione uma animação fadeIn */
 .pokemon-info {
   animation: fadeIn 1s ease-in-out;
 }
@@ -96,7 +91,6 @@ body {
   animation: zoomInOut 1.5s infinite alternate;
 }
 
-/* Botões de Navegação */
 .button-container {
   display: flex;
   justify-content: space-between;
@@ -104,7 +98,6 @@ body {
   margin: 20px auto;
 }
 
-/* Adiciona as classes do Bootstrap para a cor clássica dos botões */
 #prevButton,
 #nextButton {
   background-color: #007bff;
@@ -113,13 +106,11 @@ body {
   width: 120px;
 }
 
-/* Adiciona uma animação fadeIn */
 .button-container,
 .pokemon-info {
   animation: fadeIn 1s ease-in-out;
 }
 
-/* Adiciona uma animação zoomInOut */
 .animated {
   animation: zoomInOut 1.5s infinite alternate;
 }
