--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../imagens/pokeball_icon.png');
+  background-image: url("../imagens/pokeball_icon.png");
   opacity: 0.2;
   background-repeat: no-repeat;
   background-position: center;
@@ -175,7 +175,6 @@ body {
   background-color: #705848;
 }
 
-/* Estilos para a barra de pesquisa */
 .search-bar {
   display: flex;
   align-items: center;
@@ -185,7 +184,6 @@ body {
   flex-grow: 1;
 }
 
-/* Estilos para o botão "Voltar ao Topo" */
 #scrollTopButton {
   display: none;
   position: fixed;
@@ -198,6 +196,6 @@ body {
 }
 
 #scrollTopButton img {
-  width: 100px; /* Ajuste o tamanho conforme necessário */
+  width: 100px;
   height: auto;
 }
